<resources>
    <string name="app_name">Abis Abis</string>
    <string name="APP_ID">1848595225415704</string>
    <string name="action_settings">Settings</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading...</string>
    <string name="title_home">Calculator</string>
    <string name="title_dashboard">Thumbrule Portfolio</string>
    <string name="title_notifications">Investment Profile</string>
    <string name="title_others">Profile</string>
    <string name="title_exit">Exit</string>
    <string name="hint"><font size="12">Enter Amount</font></string>
</resources>
